--- a/comhospital/templates/writes.html
+++ b/comhospital/templates/writes.html
@@ -101,7 +101,7 @@
                     <span class="txt_bar"></span>
                     작성자: {{comhospital.writer}}
                     <span class="txt_bar"></span>
-                    최종수정일: {{comhospital.pub_date}}
+                    최종수정일: {{comhospital.update}}
                     <span class="txt_bar"></span>
 
                     {% if writer %}
