--- a/qna/templates/writet.html
+++ b/qna/templates/writet.html
@@ -69,11 +69,7 @@
             padding-bottom: 15px;
             border-bottom: 1px solid #a0a0a0;
     }
-
-    
 </style>
-
-
 
 <div class="row">
     <div class="col-lg-3">
@@ -101,7 +97,7 @@
                     <span class="txt_bar"></span>
                     작성자: {{qna.writer}}
                     <span class="txt_bar"></span>
-                    최종수정일: {{qna.pub_date}}
+                    최종수정일: {{qna.update}}
                     <span class="txt_bar"></span>
 
                     {% if writer %}
