--- a/search/templates/cervical.html
+++ b/search/templates/cervical.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css">
 
 <style>
+    .main h2 {font-weight: bold;}
     *{
         text-align: center;;
     }
@@ -20,7 +21,7 @@
         border-width: 1px;
         border-style : solid;
         border-radius : 20px;
-        border-color: #efefef;
+        border-color: #a0a0a0;
         padding: 10px;
     }
     .cer_info{
@@ -46,7 +47,7 @@
 <div class="main">
     <!-- 경고창 -->
     <div class="warning">
-        <h1 style="color:#AA3E3E; font-weight: bold;">증상 검색결과</h1>  <br> <h1>자궁경부암일 위험이 있습니다.</h1>
+        <h1 style="color:#AA3E3E; font-weight: bold; font-size:30pt;">증상 검색결과</h1>  <br> <h1><strong style="color:#557DE1; font-size:25pt;">자궁경부암</strong>일 위험이 있습니다.</h1>
     </div>
 
     <div class="cer-border">
