--- a/search/templates/liver.html
+++ b/search/templates/liver.html
@@ -16,6 +16,7 @@
 </script>
 
 <style>
+    .main h2 {font-weight: bold;}
     * {
         text-align: center;
         ;
@@ -28,7 +29,7 @@
         border-width: 1px;
         border-style : solid;
         border-radius : 20px;
-        border-color: #efefef;
+        border-color: #a0a0a0;
         padding: 10px;
     }
     .sto_info {
@@ -54,7 +55,7 @@
 <div class="main">
     <!-- 경고창 -->
     <div class="warning">
-        <h1 style="color:#AA3E3E; font-weight: bold;"> 증상 검색결과</h1> <br> <h1>간암일 위험이 있습니다.</h1>
+        <h1 style="color:#AA3E3E; font-weight: bold; font-size:30pt;"> 증상 검색결과</h1> <br> <h1><strong style="color:#557DE1; font-size:25pt;">간암</strong>일 위험이 있습니다.</h1>
     </div>
 
     <div class="sto-border">
