--- a/user/templates/signup.html
+++ b/user/templates/signup.html
@@ -2,6 +2,8 @@
 {% block content %}
 
 <style>
+    .errorlist {list-style: none; color:red; padding-left: 2px; padding-top:15px;}
+
     .panel {
       width: 500px;
       height: 500px;
@@ -16,7 +18,7 @@
 
 <div class="panel panel-default registration text-center">
     <div class="panel-heading ">
-        <h1>Sign up!</h1>
+        <h1 style="color:#6991E1; font-weight: bold; font-size: 27pt;">Sign up!</h1>
     </div>
     <div class="panel-body">
     <form method="POST" action="">
