--- a/fmapp/templates/developers.html
+++ b/fmapp/templates/developers.html
@@ -86,7 +86,7 @@
     </div>
 
     <div class="name">
-        <h1> Yeon-Woo</h1>  
+        <h1>Yeon-Woo</h1>  
     </div>
 
     <div class="sns1">
@@ -105,7 +105,7 @@
     </div>
 
     <div class="name">
-        <h1>서영</h1>
+        <h1>Seo-Yeoung</h1>
     </div>
 
     <div class="sns1">
